--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "css": "^3.0.0",
     "from": "^0.1.7",
-    "import": "^0.0.6"
+    "import": "^0.0.6",
+    "ismobilejs": "^1.1.1"
   }
 }
